fixed bugs in navigation-menu alignment and defined basic application layout

--- a/UntoMeWorld.WasmClient/Client/wwwroot/css/app.css
+++ b/UntoMeWorld.WasmClient/Client/wwwroot/css/app.css
@@ -1,6 +1,6 @@
 ﻿/* fallback */
 :root {
-    --card-color--source: 250, 250, 251;
+/*    --card-color--source: 250, 250, 251;
     --shadow-color--source: 0, 0, 0;
     --primary-color--source: 70, 70, 186;
     --primary-text-color: rgb(37, 37, 45);
@@ -18,7 +18,7 @@
     --max-width: 1400px;
     --error-color: rgb(194, 32, 32);
     --on-error-color: white;
-    --dialog-background: var(--surface-color);
+    --dialog-background: var(--surface-color);*/
 }
 body {
     padding: 0;
