--- a/UntoMeWorld.WasmClient/Client/wwwroot/css/layouts/_appLayout.scss
+++ b/UntoMeWorld.WasmClient/Client/wwwroot/css/layouts/_appLayout.scss
@@ -1,24 +1,69 @@
-﻿.page {
+﻿.page-container {
   display: flex;
-  position: absolute;
+  align-items: center;
+  justify-content: center;
+  background-color: #ddd6;
+}
+
+.page {
+  display: flex;
   height: 100vh;
   width: 100vw;
+  position: relative;
+  //max-width: 1220px;
+  box-shadow: 1px 1px 6px var(--shadow-color);
+  background-color: var(--surface-color);
 
-  .page-content {
+  .page-body {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    align-items: stretch;
+    justify-content: stretch;
+  }
+
+  .page-header {
+    height: min(20%, 3.5rem);
+    display: flex;
+  }
+
+  .page-content {
+    overflow-y: auto;
+    
   }
   
+  .page-content::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(224, 224, 224, 0.66);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+  }
+
+  .page-content::-webkit-scrollbar
+  {
+    width: .3rem;
+    background-color: #F5F5F5;
+  }
+
+  .page-content::-webkit-scrollbar-thumb
+  {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px #dddd;
+    background-color: #adadad;
+  }
+
   @media screen and (min-width: 720px) {
-    .page-content {
+    .page-body {
       top: 0;
-      padding: 0 .5em;
       left: 4.75rem;
       right: 0;
       bottom: 0;
     }
+
   }
 }
